PXS-131: Cropper modal issue has fixed
* cropper window drag issue has fixed
* uibmodal backdrop prop has changed to 'static'

--- a/src/app/styles/_bootstrap.scss
+++ b/src/app/styles/_bootstrap.scss
@@ -15,7 +15,7 @@
     };
     padding: 10px 15px;
     font-weight: 200;
-    background-color: $dove-grey;
+    background-color: $mine-black;
     color: $white;
     transition: all 0.3s ease-in-out;
     outline: 0 !important;
